--- a/.github/workflows/multiEvent.yml
+++ b/.github/workflows/multiEvent.yml
@@ -3,6 +3,7 @@ on:
    push: #Event whenever push is made to the repository on the master branch
        branches:
            - master
+           - test
 jobs:
     on-push: #job name
         runs-on: ubuntu-latest
