--- a/.github/workflows/multiEvent.yml
+++ b/.github/workflows/multiEvent.yml
@@ -9,13 +9,15 @@ on:
             - master
 
 jobs:
-    on-push: #job name
+    on-push: #job 1
+        if: github.event_name == 'push' 
         runs-on: ubuntu-latest
         steps: #Steps to be executed in the job
             - name: "Running on Master/test Push" #step 1
               run : echo "Running on master/test Push"
 
-    on-pull-request: #Job name
+    on-pull-request: #Job 2
+        if: github.event_name == 'pull_request'
         runs-on: ubuntu-latest
         steps: #steps to be executed in the job
             - name: "Running on the pull request" #Step 2
