--- a/.github/workflows/multiEvent.yml
+++ b/.github/workflows/multiEvent.yml
@@ -7,6 +7,7 @@ on:
    pull_request : #Event whenever a pull request is made to the repository
         branches:
             - master
+   workflow_dispatch:
 
 jobs:
     on-push: #job 1
