--- a/.github/workflows/multiEvent.yml
+++ b/.github/workflows/multiEvent.yml
@@ -23,3 +23,10 @@ jobs:
         steps: #steps to be executed in the job
             - name: "Running on the pull request" #Step 2
               run: echo "Running on the pull request"
+
+    on-workflow-dispatch: #job 3
+        if: github.event_name =='workflow_dispatch'
+        runs-on: ubuntu-latest
+        steps: #Steps to be executed in the job
+            - name: "Running on the workflow dispatch"
+              run: echo "Running on workflow dispatch"
